--- a/css/nav.css
+++ b/css/nav.css
@@ -46,3 +46,17 @@ main {
 .nav-fixa ul li a:hover {
   color: #ffd700;
 }
+
+@media (max-width: 600px) {
+  .nav-fixa ul {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .nav-fixa {
+    height: auto; /* se precisar ajustar para conteúdo vertical */
+    padding: 10px 0;
+  }
+}
+
